[package]
name = "waveflow-img"
version = "0.1.0"
edition = "2024"
authors = ["Neo Mannskär neo@mannskar.com"]
description = "A simpler Wave Function Collapse tool which uses YAML and an image and as input."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Ashen-Interactive/waveflow-img"
homepage = "https://github.com/Ashen-Interactive/waveflow-img"
keywords = ["wfc", "image", "procedural", "generation", "cli"]
categories = ["graphics", "algorithms", "command-line-utilities"]

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
image = "0.25.6"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
